@@ -1,8 +1,0 @@
-(*  Title:      HOL/Complex/ROOT.ML
-    ID:         $Id$
-    Author:     Jacques Fleuriot
-
-The Complex Numbers.
-*)
-
-use_thy "Complex_Main";
